# jbeduPython

./: .gitattributes  .gitignore  20251103_001.py  20251103_003.py  20251103_004.py  20251103_008.py  20251103_009.py  20251103_010.py  20251103_011.py  README.md  pyproject.toml  sample.ipynb
20251103/: 20251103_006.py  20251103_011.py
20251104/: 20251104_001.py  20251104_002.py  20251104_003.py  20251104_007.py  20251104_008.py  20251104_009.py  20251104_010.py  20251104_012.py
20251105/: 20251105_001.py  20251105_003.py  20251105_004.py  20251105_006.py  20251105_007.py  20251105_009.py  20251105_010.py
20251106/: 20251106_001.py  20251106_003.py  20251106_004.py  20251106_005.py  20251106_006.py
20251107/: 20251107_001.py  20251107_002.py  20251107_003.py  20251107_005.py  20251107_006.py  20251107_008.py  20251107_009.py  20251107_011.py
20251110/: 20251110_003.py  20251110_004.py  20251110_009.py  20251110_010.py
20251111/: 20251111_001.py  20251111_002.py  20251111_003.py  20251111_004.py
20251112/: 20251112_002.py  20251112_004.py  20251112_005.py  20251112_006.py  20251112_007.py  20251112_008.py  20251112_009.py  20251112_012.py
20251113/: 20251113_001.ipynb  20251113_002.ipynb
20251114/: 20251114_001.ipynb  20251114_002.ipynb
20251117/: 20251117_005.py  20251117_006.py
20251118/: 20251118_001.py  20251118_002.py  20251118_003.py  20251118_005.py  20251118_008.py
data/: (2010-2020)_weather.xlsx  LOCAL_PEOPLE_DONG_202510.csv  abalone.csv  chick003.csv  chick004.csv  class.csv  covid-data.csv  customer_clustering.csv  customer_join4.csv  (+18 more)
(+154 files in other folders)
