[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "standardscaler>=0.5",
    "statsmodels>=0.14.6",
    "yellowbrick>=1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
